--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
-version: '3.9'
+# указание версии докер компоуза deprecated
 
 services:
+
+  db:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: Vmelvladmlvh1211
+      MYSQL_DATABASE: dune
+    # порт для хоста не нужен, если не нужен внешний доступ к базе
+    # ports:
+    #   - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    # указываем, внутри какой сети будет работать приложение
+    networks:
+      - dune
+
   web:
     build: .
     volumes:
@@ -10,6 +28,12 @@ services:
     restart: always
     environment:
       - DJANGO_SETTINGS_MODULE=dune.settings
+    depends_on:
+      db:
+        condition: service_healthy
+    # указываем, внутри какой сети будет работать приложение
+    networks:
+      - dune
 
   nginx:
     build:
@@ -22,6 +46,14 @@ services:
     depends_on:
       - web
     restart: always
+    # указываем, внутри какой сети будет работать приложение
+    networks:
+      - dune
 
 volumes:
   static_volume:
+
+# описываем сеть и ее тип
+networks:
+  dune:
+    driver: bridge
